[package]
name = "rhymuweb"
version = "1.2.1"
description = "Common types for the Hypertext Transfer Protocol (HTTP)"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["parser-implementations", "web-programming"]
keywords = ["http", "parser"]
repository = "https://github.com/rhymu8354/Http.git"
exclude = [
    "*.hpp",
    "*.cpp",
    "CMakeLists.txt"
]

[dependencies]
encoding_rs = "0.8"
flate2 = "1.0"
rhymessage = "1.3"
rhymuri = "1.3"
thiserror = "1.0"
